[package]
name = "tarssh"
version = "0.4.0-metrics"
description = "A simple SSH tarpit server"
authors = ["Thomas Hurst <tom@hur.st>", "Sebastian Walz <sivizius@sivizius.eu>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Freaky/tarssh"
documentation  ="https://docs.rs/tarssh"
keywords = ["ssh", "tarpit", "security", "server"]
readme = "README.md"

[features]
default = ["sandbox", "drop_privs", "exporters"]
sandbox = ["rusty-sandbox"]
drop_privs = ["privdrop"]
exporters = ["hyper"]

[dependencies]
env_logger = "0.7"
exitcode = "1.1"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
rand = "0.7"
structopt = "0.3"
tokio = { version = "0.2", features = ["signal", "sync", "net", "time", "tcp", "io-driver", "io-util", "rt-threaded"] }
hyper = { version = "0.13", optional = true }

[target."cfg(unix)".dependencies]
rusty-sandbox = { version = "0.2", optional = true }
privdrop = { version = "0.3", optional = true }
